--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -672,7 +672,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Timestamp"
+    "## Timestamp\n",
+    "\n",
+    "The Timestamp column in the dataset was in the format `(\"EEE MMM dd HH:mm:ss Z yyyy\")`, providing the specific time and date of the tweet. In order to preprocess this datetime attribute, we converted it into 2 new features.\n",
+    "\n",
+    "### Day of Week\n",
+    "Firstly, we extracted the day of the week of the tweet post as an integer from `0 to 6` representing the days `0 = Sunday, 6 = Saturday` which might reflect weekly trends such as the difference in tweet activity on weekdays and weekends.\n",
+    "To make these integers are normalised and tractable as input to the neural network, we converted these values to a one-hot-encoded vector of `length = 7`. We then applied to `unpack(dataframe, cols)` preprocessing function over the one-hot vector to unpack the vector into 7 different columns in the dataframe, each representing a day in the week with a single integer value of 0 or 1, representing the day repspectively.\n",
+    "\n",
+    "### Time Int\n",
+    "Secondly, for a more fine-grained time based feature extraction, we calculated the integer number of seconds from 1st Jan 2019 to each of the timestamps in the dataset. To normalise these large integer values, we applied a logarithmic transformation function, `log_transform(dataframe, cols)`, over the column of data where each time integer value x is converted to `log(x+1)`, removing skewness of the disporportionately large time int data values."
    ]
   },
   {
@@ -680,7 +689,11 @@
    "metadata": {},
    "source": [
     "## Sentiment\n",
-    "\n"
+    "\n",
+    "The Sentiment column uses `SentiStrength` to produce a score for positive `(1 to 5)` and negative `(-1 to -5)` senti\n",
+    "ment. \n",
+    "\n",
+    "Hence, we extracted the positive score and negative score as separate features and appended them as separate columns in the dataframe. Moreover, we extracted the integer difference value of the `positive` and `negative` scores in the column `\"Sentiment Disparity\"`. Next, to scale these `positive`, `negative` and `disparity` integer scores, we applied the `scaledtransform(dataframe,cols)` function over these columns which helps to normalise the values by dividing them by the mean value of the column."
    ]
   },
   {
@@ -817,6 +830,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Username Look Up Table\n",
+    "\n",
+    "In order to create a context of the types of users who are posting tweets, we decided to create a look up table stored with context features for each username to be fed into our neural network alongside our preprocessed data. \n",
+    "\n",
+    "The `find_user_stats(dataframe)` function helps to create a dataframe with `minimum, maximum and mean` values of the number of followers, number of friends, number of retweets and number of favourites for each user grouped by the username in the training set. In order to preprocess and standardise these values like our other features, we then applied the `log_transform(dataframe, cols)` preprocessing function over these values to perform logarithmic transformation. This serves as an attempt to increase the contextual information of the \"Username\" feature in our dataset for the neural network to pick up on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model Architecture\n",
     "\n",
     "We created a simple 2-layer linear regression model to predict the retweet values. \n",
@@ -928,7 +952,7 @@
     "\n",
     "To measure the accuracy of the model, we take the log10 of the absolute difference between the prediction and true retweet value + 1. `log10(|y - t| + 1)`\n",
     "\n",
-    "What this essentially means is that we're looking at whether or not the model is able to arrive on a prediction that is within a certain order of magnitude of the actual retweet value instead of whether or not it is able to accurately predict the retweet count. We interpret this as reasonable implementation of what predicting the \"ballkpark\" figure of a retweet is."
+    "What this essentially means is that we're looking at whether or not the model is able to arrive on a prediction that is within a certain order of magnitude of the actual retweet value instead of whether or not it is able to accurately predict the retweet count. We interpret this as reasonable implementation of what predicting the \"ballpark\" figure of a retweet is."
    ]
   },
   {
@@ -1067,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
