--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "As COVID-19 impacts our daily routine and changed the norms that we accepted prior to the pandemic, there are some interests in quantifying its impacts on the global stage. One way to measure such impact is to monitor the explosion of activity in social media usage such as Twitter and Youtube, where most people who are not able to move freely, shares their thoughts through such platforms. Twitter in particular, provides a platform that allows the users to post their thoughts in a succint manner and add hashtags or mentions to increase the tweet's exposure on the platform. Our task will thus be to predict the number of retweets a tweet that is COVID-19 related will have using the TweetsCOV-19 dataset.\n",
     "\n",
-    "At the end of this project, we created a Linear Regression Model and an interactive GUI to predict retweet count based on input parameters found in TweetsCOV-19 dataset. Custome values can also be input into the model.\n",
+    "For this project, we created a Linear Regression Model and an interactive GUI to predict retweet count based on input parameters found in TweetsCOV-19 dataset. Custom values can also be input into the model.\n",
     "\n",
     "![Final Result](assets/gui-result.PNG)"
    ]
@@ -30,7 +30,7 @@
    "source": [
     "# Dataset Description\n",
     "\n",
-    "The dataset that is used for this project is obtained from the COVID-19 Retweet Prediction Challenge. For this prediction model, we used Part 2 dataset that can be obtained from this website https://data.gesis.org/tweetscov19/#dataset. This dataset consists of tweets that is COVID-19 related from the month of May 2020.\n",
+    "The dataset that is used for this project is obtained from the COVID-19 Retweet Prediction Challenge. For this prediction model, we used Part 1 (Oct 2019 - April 2020) dataset for training and Part 2 (May 2020 - May 2020) for testing obtained from https://data.gesis.org/tweetscov19/#dataset.\n",
     "\n",
     "From the dataset, there are different features for the tweet data that we obtain and the feature description are as follows:\n",
     "\n",
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing\n",
+    "# Preprocessing and Feature Engineering\n",
     "\n",
     "In order to train our prediction model, we have also done some preprocessing of the features that are available in the dataset. All these changes to the raw features allow us to link these processed features to the final retweet prediction in a more precise manner. \n",
     "\n",
@@ -267,9 +267,9 @@
     "1. #Followers: Float. Log transformed: `log_10(x + 1)`\n",
     "2. #Friends: Float. Log transformed: `log_10(x + 1)`\n",
     "3. #Favorites: Float. Log transformed: `log_10(x + 1)`\n",
-    "4. Positive (Sentiment): Float. Scaled.\n",
-    "5. Negative (Sentiment): Float. Scaled.\n",
-    "6. Sentiment Disparity: Float. Scaled.\n",
+    "4. Positive (Sentiment): Float. Scaled. `x/max(X)`\n",
+    "5. Negative (Sentiment): Float. Scaled. `x/max(X)`\n",
+    "6. Sentiment Disparity: Float. Scaled. `x/max(X)`\n",
     "7. No. of Entities: Float. Log transformed: `log_10(x + 1)`\n",
     "8. Day of Week: Float. One-Hot Vector. (7, ) Vector.\n",
     "9. Time Int: Float. Log transformed: `log_10(x + 1)`\n",
@@ -818,8 +818,7 @@
     "# Model Architecture\n",
     "\n",
     "We use ensemble methods (insert image):\n",
-    "1. 0-classifier (print out layer)\n",
-    "2. regression model (print out layer)"
+    "1. regression model (print out layer)"
    ]
   },
   {
@@ -841,9 +840,32 @@
    "source": [
     "# Discussion\n",
     "\n",
-    "comparing with state of the art.\n",
+    "To summarise our approach, our group experimented with:\n",
+    " - Simple Linear Regression\n",
+    " - Regression in Pytorch (final model selected)\n",
+    " - Classification into Regression in Pytorch\n",
+    " - Regression with XGBoost \n",
     "\n",
-    "possible issues. possible improvements"
+    "#### Comparison with state-of-the-art:\n",
+    "We referenced several papers which also tackled this problem of predicting retweet counts, inclusive of the winner of the CIKM 2020 AnalytiCup competition which the dataset originates from.\n",
+    "\n",
+    "A two-phase ensemble model was chosen by researchers of the 2014 paper \"A Two-Phase Model for Retweet Number Prediction\"(http://shichuan.org/doc/18.pdf), which trained an additional model to classify labeled tweets using an 80-20 heuristic split. However, their dataset was based on the Sina Weibo micro-blog network which had a strong distinctions between the average tweet and those from certain users with high amounts of retweets.\n",
+    "\n",
+    "Our project attempted to implement the learnings of this paper by in 3 ways: 1) the same 80-20 rule, 2) K-Means Clustering using the Elbow Method on retweets, and lastly a simple 0-1 binary label for tweets with and without retweets. From our preliminary trials, the addition of labels of the last method had the most significant effect in reducing loss. However, we discovered that the classifier model did not perform well enough which actually resulted in higher loss overall.\n",
+    "\n",
+    "We then turned our attention to what happened to be the competition winner's paper \"CIKM AnalytiCup 2020: COVID-19 Retweet Prediction with Personalized Attention\" (http://ceur-ws.org/Vol-2881/paper1.pdf), which added informational context related to the user through an attention mechanism, which was then run simply into two linear layers.\n",
+    "\n",
+    "For our project, we used a far simpler statistical mechanism of compiling a user lookup table from the training data and referenced it to add context about our users to the model (explained in preprocessing). Since the training dataset of 8 million tweets was made by roughly one-third the amount of unique users, (or roughly, that one user made about 3 tweets), we found that the addition of the lookup table greatly enhanced the performance even on the test dataset. Notably, since the test dataset was captured from a chronological period after the training dataset, this method does not compromise the seperation of the ground truth.\n",
+    "\n",
+    "#### possible issues. possible improvements\n",
+    "Our final model utilises a relatively low cardinal feature space which is both due to a lack of experience in feature engineering as well as computational power available. Other models successfully embedded or otherwise cast information like entities or hashtags through more complicated machine learning techniques, which we could certainly learn from.\n",
+    "\n",
+    "Attention mechanisms seem to successfully provide significant increases in performance as shown in the winner's paper or the earlier 2016 \"Retweet Prediction with Attention-based Deep Neural Networks\" (http://www.qizhang.info/paper/zhang-lfp0754.pdf) paper. Our group did not successfully implement an attention mechanism and thus did not continue down this path, however this is one improvement that we could have made to our model.\n",
+    "\n",
+    "[one more i will think of later]\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -894,7 +916,11 @@
     "\n",
     "1. Source code: https://github.com/arglux/50021-ai-project\n",
     "2. Report: \n",
-    "3. Reference papers:"
+    "\n",
+    "#### 3. Reference papers:\n",
+    "- Liu G., Shi C., Chen Q., Wu B., Qi J. (2014) A Two-Phase Model for Retweet Number Prediction.\n",
+    "- Raj, T.V. (2021). CIKM AnalytiCup 2020: COVID-19 Retweet Prediction with Personalized Attention.\n",
+    "- Zhang, Q., Gong, Y., Wu, J., Huang, H., & Huang, X. (2016). Retweet Prediction with Attention-based Deep Neural Network. "
    ]
   },
   {
@@ -921,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
