--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -264,14 +264,14 @@
     "1. #Followers: Float. Log transformed: `log_10(x + 1)`\n",
     "2. #Friends: Float. Log transformed: `log_10(x + 1)`\n",
     "3. #Favorites: Float. Log transformed: `log_10(x + 1)`\n",
-    "4. Positive (Sentiment): Float. Scaled. `x/max(X)`\n",
-    "5. Negative (Sentiment): Float. Scaled. `x/max(X)`\n",
-    "6. Sentiment Disparity: Float. Scaled. `x/max(X)`\n",
+    "4. Positive (Sentiment): Float. Scaled. `x/5`\n",
+    "5. Negative (Sentiment): Float. Scaled. `x/-5`\n",
+    "6. Sentiment Disparity: Float. Scaled. `x/10`\n",
     "7. No. of Entities: Float. Log transformed: `log_10(x + 1)`\n",
     "8. Day of Week: Float. One-Hot Vector. (7, ) Vector.\n",
     "9. Time Int: Float. Log transformed: `log_10(x + 1)`\n",
-    "10. Hashtags Embedding: (25, ) Vector.\n",
-    "11. Mentions Embedding: (25, ) Vector.\n",
+    "10. Hashtags Embedding: Float. One-Hot Vector. (25, ) Vector.\n",
+    "11. Mentions Embedding: Float. One-Hot Vector. (25, ) Vector.\n",
     "12. #Followers Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
     "12. #Friends Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
     "12. #Retweets Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
@@ -1008,7 +1008,7 @@
    "source": [
     "As we can see from the result above, the worst deviation is around `4.72` order of magnitude away (difference of `50,000 retweets`). But this extreme deviation is very rare, as a deviation of `4.0+` occurrs less than `0.01%` of the time in the test set. \n",
     "\n",
-    "In fact, the model does pretty well in most cases (`~97%` of cases), as its prediction on `79.4%` of test data lands within `0.0 - 0.99` order of magnitude of the actual tweet (difference of `10 retweet`). Afterwhich, `17.6%` of next portion of test data prediction falls within `1.00 - 1.99` order of magnitude (difference of `100 retweet`)."
+    "In fact, the model does pretty well in most cases (`~97%` of cases), as its prediction on `79.4%` of test data lands within `0.0 - 0.99` order of magnitude of the actual tweet (difference of `10 retweets`). Afterwhich, `17.6%` of next portion of test data prediction falls within `1.00 - 1.99` order of magnitude (difference of `100 retweet`)."
    ]
   },
   {
@@ -1026,21 +1026,19 @@
     "## Comparison with state-of-the-art:\n",
     "We referenced several papers which also tackled this problem of predicting retweet counts, inclusive of the winner of the CIKM 2020 AnalytiCup competition which the dataset originates from.\n",
     "\n",
-    "A two-phase ensemble model was chosen by researchers of the 2014 paper \"A Two-Phase Model for Retweet Number Prediction\"(http://shichuan.org/doc/18.pdf), which trained an additional model to classify labeled tweets using an 80-20 heuristic split. However, their dataset was based on the Sina Weibo micro-blog network which had a strong distinctions between the average tweet and those from certain users with high amounts of retweets.\n",
+    "A two-phase ensemble model was chosen by researchers of the 2014 paper \"A Two-Phase Model for Retweet Number Prediction\"(http://shichuan.org/doc/18.pdf), which trained an additional model to classify labeled tweets using an 80-20 heuristic split. However, their dataset was based on the Sina Weibo micro-blog network which had stronger distinctions between the average tweet and those from certain users with high amounts of retweets.\n",
     "\n",
-    "Our project attempted to implement the learnings of this paper by in 3 ways: 1) the same 80-20 rule, 2) K-Means Clustering using the Elbow Method on retweets, and lastly a simple 0-1 binary label for tweets with and without retweets. From our preliminary trials, the addition of labels of the last method had the most significant effect in reducing loss. However, we discovered that the classifier model did not perform well enough which actually resulted in higher loss overall.\n",
+    "Our project attempted to implement the learnings of this paper by in 3 ways: 1) the same 80-20 rule, 2) K-Means Clustering using the Elbow Method on retweets, and lastly a simple 0-1 binary label for tweets with and without retweets. From our preliminary trials, the addition of labels of the last method had the most significant effect in reducing loss. However, the classifier model did not perform well enough which actually resulted in poorer performance overall.\n",
     "\n",
-    "We then turned our attention to what happened to be the competition winner's paper \"CIKM AnalytiCup 2020: COVID-19 Retweet Prediction with Personalized Attention\" (http://ceur-ws.org/Vol-2881/paper1.pdf), which added informational context related to the user through an attention mechanism, which was then run simply into two linear layers.\n",
+    "We then turned our attention to the competition winner's paper \"CIKM AnalytiCup 2020: COVID-19 Retweet Prediction with Personalized Attention\" (http://ceur-ws.org/Vol-2881/paper1.pdf), which added informational context related to the user through an attention mechanism, which was then run simply into two linear layers.\n",
     "\n",
-    "For our project, we used a far simpler statistical mechanism of compiling a user lookup table from the training data and referenced it to add context about our users to the model (explained in preprocessing). Since the training dataset of 8 million tweets was made by roughly one-third the amount of unique users, (or roughly, that one user made about 3 tweets), we found that the addition of the lookup table greatly enhanced the performance even on the test dataset. Notably, since the test dataset was captured from a chronological period after the training dataset, this method does not compromise the seperation of the ground truth.\n",
+    "For our project, we used a far simpler statistical method of compiling a user lookup table from the training data and referenced it to add context about our users to the model (explained in preprocessing). Since the training dataset of 8 million tweets was made by roughly one-third the amount of unique users, (or roughly, that one user made about 3 tweets), we found that the addition of the lookup table was able to great enhance performance even on the test dataset.\n",
+    "\n",
     "\n",
     "## Possible Issues & Improvements\n",
-    "Our final model utilises a relatively low cardinal feature space which is both due to a lack of experience in feature engineering as well as computational power available. Other models successfully embedded or otherwise cast information like entities or hashtags through more complicated machine learning techniques, which we could certainly learn from.\n",
+    "Attention mechanisms seem to successfully provide significant increases in performance as shown in the winner's paper or the earlier 2016 \"Retweet Prediction with Attention-based Deep Neural Networks\" (http://www.qizhang.info/paper/zhang-lfp0754.pdf) paper, and is likely a preferable alternative to adding user context rather than compiling and storing a huge lookup table like our model does.\n",
     "\n",
-    "Attention mechanisms seem to successfully provide significant increases in performance as shown in the winner's paper or the earlier 2016 \"Retweet Prediction with Attention-based Deep Neural Networks\" (http://www.qizhang.info/paper/zhang-lfp0754.pdf) paper. Our group did not successfully implement an attention mechanism and thus did not continue down this path, however this is one improvement that we could have made to our model.\n",
-    "\n",
-    "[one more i will think of later]\n",
-    "\n",
+    "For our model, we utilised mean square error loss on log values which caused our model to prioritise being in the same magnitude of retweets rather than on the actual retweet count. From experiments, the latter would punish the model greatly for guessing too low when high outliers are encountered, resulting in predictions losing their significance since it would output consistently non-zero values. To overcome this, we could have tried experimenting with the absolute difference as the loss function which could have led to a better overall result.\n",
     "\n",
     "\n"
    ]
@@ -1118,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
