--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -1038,9 +1038,9 @@
     "## Possible Issues & Improvements\n",
     "Attention mechanisms seem to successfully provide significant increases in performance as shown in the winner's paper or the earlier 2016 \"Retweet Prediction with Attention-based Deep Neural Networks\" (http://www.qizhang.info/paper/zhang-lfp0754.pdf) paper, and is likely a preferable alternative to adding user context rather than compiling and storing a huge lookup table like our model does.\n",
     "\n",
-    "For our model, we utilised mean square error loss on log values which caused our model to prioritise being in the same magnitude of retweets rather than on the actual retweet count. From experiments, the latter would punish the model greatly for guessing too low when high outliers are encountered, resulting in predictions losing their significance since it would output consistently non-zero values. To overcome this, we could have tried experimenting with the absolute difference as the loss function which could have led to a better overall result.\n",
+    "Additionally, we utilised mean square error loss on log values which caused our model to prioritise being in the same magnitude of retweets rather than on the actual retweet count. From experiments, the latter would punish the model greatly for guessing too low when high outliers are encountered, resulting in predictions losing their significance since it would output consistently non-zero values. To overcome this, we could have tried experimenting with the absolute difference as the loss function which could have led to a better overall result.\n",
     "\n",
-    "\n"
+    "One last improvement that is evident when comparing with the winner's paper is the number of features that they are running into their model (500 vs just 77 in ours), which they achieved by including ratios such as followers to favorites or embedding data such as the entities. With better feature engineering, it is likely that we could have improved the performance of our model.\n"
    ]
   },
   {
