--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Team Members\n",
-    "1. Aaron Khoo\n",
+    "1. Aaron Khoo (1002788)\n",
     "2. Calvin Yusnoveri (1002911)\n",
-    "3. Amarjyot Kaur Narula\n",
+    "3. Amarjyot Kaur Narula (1003084)\n",
     "4. Joseph Chng (1003811)"
    ]
   },
@@ -1118,7 +1118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
